# AdventOfCode2023

Day1/: pyproject.toml
Day1/day1/: main.py
Day1/tests/: test_main.py
Day2-CSharp/: Day2.csproj  PlayTests.cs  Program.cs
Day2-Python/: pyproject.toml
Day4/: AdventOfCode4.sln
Day4/AdventOfCode4/: Card.cs  Program.cs
Day4/AdventOfCode4.Tests/: AdventOfCode4.Tests.csproj  ProcessingTests.cs
Day4/AdventOfCode4/Services/: Processing.cs
